kubernetes/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: ingress
  namespace: default
spec:
 egress:
  - hosts:
    - "pem/*"
    - "istio-system/*"
